--- a/listTag.html
+++ b/listTag.html
@@ -13,6 +13,15 @@
             <li>mango</li>
             <li>grape</li>
         </ul>
+        <!-- this list which is displaye in the unordered list like
+             apple
+             mango
+             grape 
+                        without some order like
+                        1 apple
+                        2 mango
+                        3 grape
+            -->
         <hr>
         <h3 style="color:rgb(233, 0, 194);">students with Roll No :-</h3>
         <ol start="101">
