adding comments to dl dt dd tags at bottom of doc

--- a/listTag.html
+++ b/listTag.html
@@ -47,6 +47,11 @@
             <dd>-gingr tea</dd>
             <dd>-dum tea</dd>
         </dl>
+        <!-- dl -mean's [ description list]
+             dt -mean's [ define term ]
+             dd -mean's [ describe each team]
+        -->
+                  
         <link rel="icon" type="image/x-icon" href="C:\Users\91954\Downloads\icons8-html-5-48.png">
     </body>
 
